// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Typography (Native) > renders Blockquote 1`] = `
<span
  className=""
  style={
    {
      "display": "contents",
    }
  }
>
  <span
    className=" "
    style={
      {
        "display": "contents",
      }
    }
  >
    <span
      className=" t_dark is_Theme"
      style={
        {
          "color": "",
          "display": "contents",
        }
      }
    >
      <span
        className=" "
        style={
          {
            "display": "contents",
          }
        }
      >
        <span
          className="t_sub_theme t_dark is_Theme"
          style={
            {
              "color": "",
              "display": "contents",
            }
          }
        >
          <blockquote
            className="is_Blockquote "
            fontStyle="italic"
            role="region"
            style={
              {
                "backgroundColor": "var(--muted)",
                "borderLeftColor": "var(--primary)",
                "borderLeftStyle": "solid",
                "borderLeftWidth": "4px",
                "color": "var(--foreground)",
                "marginBottom": "var(--c-space-3)",
                "marginTop": "var(--c-space-3)",
                "paddingBottom": "var(--c-space-3)",
                "paddingLeft": "var(--c-space-4)",
                "paddingRight": "var(--c-space-4)",
                "paddingTop": "var(--c-space-3)",
              }
            }
          >
            Blockquote
          </blockquote>
        </span>
      </span>
      <div
        style={
          {
            "display": "contents",
          }
        }
      />
      <div
        style={
          {
            "display": "contents",
          }
        }
      />
    </span>
  </span>
</span>
`;

exports[`Typography (Native) > renders LeadText 1`] = `
<span
  className="t_unmounted"
  style={
    {
      "display": "contents",
    }
  }
>
  <span
    className=" "
    style={
      {
        "display": "contents",
      }
    }
  >
    <span
      className=" t_dark is_Theme"
      style={
        {
          "color": "",
          "display": "contents",
        }
      }
    >
      <span
        className=" "
        style={
          {
            "display": "contents",
          }
        }
      >
        <span
          className="t_sub_theme t_dark is_Theme"
          style={
            {
              "color": "",
              "display": "contents",
            }
          }
        >
          <p
            className="is_LeadText font_body _display-inline _boxSizing-border-box _wordWrap-break-word _marginTop-0px _marginRight-0px _marginBottom-c-space-3 _marginLeft-0px _userSelect-auto _whiteSpace-normal _fontFamily-f-family _color-mutedForegr3422748 _fontSize-f-size-5 _lineHeight-32px _fontWeight-400 _textAlign-left"
            style={{}}
          >
            Lead text
          </p>
        </span>
      </span>
      <div
        style={
          {
            "display": "contents",
          }
        }
      />
      <div
        style={
          {
            "display": "contents",
          }
        }
      />
    </span>
  </span>
</span>
`;

exports[`Typography (Native) > renders MutedText 1`] = `
<span
  className=""
  style={
    {
      "display": "contents",
    }
  }
>
  <span
    className=" "
    style={
      {
        "display": "contents",
      }
    }
  >
    <span
      className=" t_dark is_Theme"
      style={
        {
          "color": "",
          "display": "contents",
        }
      }
    >
      <span
        className=" "
        style={
          {
            "display": "contents",
          }
        }
      >
        <span
          className="t_sub_theme t_dark is_Theme"
          style={
            {
              "color": "",
              "display": "contents",
            }
          }
        >
          <p
            className="is_MutedText font_body _display-inline _boxSizing-border-box _wordWrap-break-word _marginTop-0px _marginRight-0px _marginBottom-c-space-3 _marginLeft-0px _userSelect-auto _whiteSpace-normal _fontFamily-f-family _color-mutedForegr3422748 _lineHeight-24px _fontSize-f-size-3 _fontWeight-400 _textAlign-left"
            style={{}}
          >
            Muted text
          </p>
        </span>
      </span>
      <div
        style={
          {
            "display": "contents",
          }
        }
      />
      <div
        style={
          {
            "display": "contents",
          }
        }
      />
    </span>
  </span>
</span>
`;

exports[`Typography (Native) > renders TypographyText 1`] = `
<span
  className="t_unmounted"
  style={
    {
      "display": "contents",
    }
  }
>
  <span
    className=" "
    style={
      {
        "display": "contents",
      }
    }
  >
    <span
      className=" t_dark is_Theme"
      style={
        {
          "color": "",
          "display": "contents",
        }
      }
    >
      <span
        className=" "
        style={
          {
            "display": "contents",
          }
        }
      >
        <span
          className="t_sub_theme t_dark is_Theme"
          style={
            {
              "color": "",
              "display": "contents",
            }
          }
        >
          <p
            className="is_TypographyText font_body _display-inline _boxSizing-border-box _wordWrap-break-word _marginTop-0px _marginRight-0px _marginBottom-c-space-3 _marginLeft-0px _userSelect-auto _whiteSpace-normal _fontFamily-f-family _color-foreground _lineHeight-24px _fontSize-f-size-3 _fontWeight-400 _textAlign-left"
            style={{}}
          >
            Some text
          </p>
        </span>
      </span>
      <div
        style={
          {
            "display": "contents",
          }
        }
      />
      <div
        style={
          {
            "display": "contents",
          }
        }
      />
    </span>
  </span>
</span>
`;

exports[`Typography (Native) > renders a Heading with default level 1`] = `
<span
  className="t_unmounted"
  style={
    {
      "display": "contents",
    }
  }
>
  <span
    className=" "
    style={
      {
        "display": "contents",
      }
    }
  >
    <span
      className=" t_dark is_Theme"
      style={
        {
          "color": "",
          "display": "contents",
        }
      }
    >
      <span
        className=" "
        style={
          {
            "display": "contents",
          }
        }
      >
        <span
          className="t_sub_theme t_dark is_Theme"
          style={
            {
              "color": "",
              "display": "contents",
            }
          }
        >
          <span
            aria-level={2}
            className="is_Heading font_heading _display-inline _boxSizing-border-box _wordWrap-break-word _whiteSpace-pre-wrap _marginTop-0px _marginRight-0px _marginBottom-c-space-3 _marginLeft-0px _fontFamily-f-family _fontWeight-600 _color-foreground _letterSpacing--0--5px _textAlign-left _fontSize-f-size-7 _lineHeight-40px"
            role="heading"
            style={{}}
          >
            Heading
          </span>
        </span>
      </span>
      <div
        style={
          {
            "display": "contents",
          }
        }
      />
      <div
        style={
          {
            "display": "contents",
          }
        }
      />
    </span>
  </span>
</span>
`;

exports[`Typography (Native) > renders a Heading with level 1 1`] = `
<span
  className=""
  style={
    {
      "display": "contents",
    }
  }
>
  <span
    className=" "
    style={
      {
        "display": "contents",
      }
    }
  >
    <span
      className=" t_dark is_Theme"
      style={
        {
          "color": "",
          "display": "contents",
        }
      }
    >
      <span
        className=" "
        style={
          {
            "display": "contents",
          }
        }
      >
        <span
          className="t_sub_theme t_dark is_Theme"
          style={
            {
              "color": "",
              "display": "contents",
            }
          }
        >
          <span
            aria-level={1}
            className="is_Heading font_heading _display-inline _boxSizing-border-box _wordWrap-break-word _whiteSpace-pre-wrap _marginTop-0px _marginRight-0px _marginBottom-c-space-3 _marginLeft-0px _fontFamily-f-family _fontWeight-600 _color-foreground _letterSpacing--0--5px _textAlign-left _fontSize-f-size-8 _lineHeight-44px"
            role="heading"
            style={{}}
          >
            Heading
          </span>
        </span>
      </span>
      <div
        style={
          {
            "display": "contents",
          }
        }
      />
      <div
        style={
          {
            "display": "contents",
          }
        }
      />
    </span>
  </span>
</span>
`;
